25w25a, adding radishes, gonna start doing this daily bc i nearly lost the pitaya code ;-; 0.4.0 isn't coming this weekend

--- a/src/main/resources/assets/cravings_mod/lang/de_de.json
+++ b/src/main/resources/assets/cravings_mod/lang/de_de.json
@@ -1,6 +1,6 @@
 {
-  "item.cravings_mod.grilled_cheese": "Gegrilltes Käsesandwich",
   "item.cravings_mod.hamburger": "Hamburger",
+  "item.cravings_mod.grilled_cheese": "Gegrilltes Käsesandwich",
   "item.cravings_mod.beer_bottle": "Bierflasche",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Mehlsack",
   "item.cravings_mod.cheese_curds": "Käsebruch",
@@ -10,19 +10,19 @@
   "item.cravings_mod.wort_bottle": "Würzeflasche",
   "item.cravings_mod.burger_buns": "Burgerbrötchen",
   "item.cravings_mod.flour": "Mehl",
-  "item.cravings_mod.cheese_sandwich": "Käsesandwich",
-  "item.cravings_mod.dipped_curds": "Getauchter Käsebruch",
   "item.cravings_mod.flour_sack": "Mehlsack",
-  "item.cravings_mod.pitaya": "Pitaya",
+  "item.cravings_mod.dipped_curds": "Getauchter Käsebruch",
+  "item.cravings_mod.cheese_sandwich": "Käsesandwich",
   "item.cravings_mod.fabric": "Stoff",
+  "item.cravings_mod.pitaya": "Pitaya",
   "item.cravings_mod.blt": "BLT",
   "item.cravings_mod.raw_bacon": "Roher Speck",
   "block.cravings_mod.pitaya_crop": "Pitaya-Samen",
   "item.cravings_mod.ice_cream": "Eiscreme",
   "gui.cravings_mod.fryer_gui.label_fryer": "Fritteuse",
   "item.cravings_mod.dough": "Teig",
-  "item.cravings_mod.cheese_slice": "Käsescheibe",
   "item.cravings_mod.toast": "Geröstetes Brot",
+  "item.cravings_mod.cheese_slice": "Käsescheibe",
   "item.cravings_mod.olive": "Olive",
   "item.cravings_mod.knife": "Messer",
   "item.cravings_mod.grape_seeds": "Traubenkerne",
@@ -31,6 +31,7 @@
   "block.cravings_mod.lemon_leaves": "Zitronenblätter",
   "block.cravings_mod.lemon_sapling": "Zitronensetzling",
   "block.cravings_mod.lettuce_crop": "Lettuce Crop",
+  "item.cravings_mod.radish": "Radish",
   "item.cravings_mod.bucket_of_whey": "Eimer mit Molke",
   "item.cravings_mod.yeast": "Hefe",
   "item.cravings_mod.fried_curds": "Gebratener Käsebruch",
