--- a/src/main/resources/assets/cravings_mod/lang/en_us.json
+++ b/src/main/resources/assets/cravings_mod/lang/en_us.json
@@ -1,6 +1,6 @@
 {
-  "item.cravings_mod.grilled_cheese": "Grilled Cheese",
   "item.cravings_mod.hamburger": "Hamburger",
+  "item.cravings_mod.grilled_cheese": "Grilled Cheese",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Flour Sack",
   "item.cravings_mod.beer_bottle": "Beer Bottle",
   "item.cravings_mod.cheese_curds": "Cheese Curds",
@@ -10,19 +10,19 @@
   "item.cravings_mod.wort_bottle": "Wort Bottle",
   "item.cravings_mod.burger_buns": "Burger Buns",
   "item.cravings_mod.flour": "Flour",
-  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
-  "item.cravings_mod.dipped_curds": "Dipped Curds",
   "item.cravings_mod.flour_sack": "Flour Sack",
-  "item.cravings_mod.pitaya": "Pitaya",
+  "item.cravings_mod.dipped_curds": "Dipped Curds",
+  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
   "item.cravings_mod.fabric": "Fabric",
+  "item.cravings_mod.pitaya": "Pitaya",
   "item.cravings_mod.blt": "BLT",
   "item.cravings_mod.raw_bacon": "Raw Bacon",
   "block.cravings_mod.pitaya_crop": "Pitaya Seeds",
   "item.cravings_mod.ice_cream": "Ice Cream",
   "gui.cravings_mod.fryer_gui.label_fryer": "Fryer",
   "item.cravings_mod.dough": "Dough",
-  "item.cravings_mod.cheese_slice": "Cheese Slice",
   "item.cravings_mod.toast": "Toast",
+  "item.cravings_mod.cheese_slice": "Cheese Slice",
   "item.cravings_mod.olive": "Olive",
   "item.cravings_mod.knife": "Knife",
   "item.cravings_mod.grape_seeds": "Grape Seeds",
@@ -31,6 +31,7 @@
   "block.cravings_mod.lemon_leaves": "Lemon Leaves",
   "block.cravings_mod.lemon_sapling": "Lemon Sapling",
   "block.cravings_mod.lettuce_crop": "Lettuce Crop",
+  "item.cravings_mod.radish": "Radish",
   "item.cravings_mod.bucket_of_whey": "Bucket of Whey",
   "item.cravings_mod.yeast": "Yeast",
   "item.cravings_mod.fried_curds": "Fried Curds",
