--- a/src/main/resources/assets/cravings_mod/lang/fr_fr.json
+++ b/src/main/resources/assets/cravings_mod/lang/fr_fr.json
@@ -1,6 +1,6 @@
 {
-  "item.cravings_mod.hamburger": "Hamburger",
   "item.cravings_mod.grilled_cheese": "Sandwich au fromage grillé",
+  "item.cravings_mod.hamburger": "Hamburger",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Sac de farine",
   "item.cravings_mod.beer_bottle": "Bouteille de bière",
   "item.cravings_mod.cheese_curds": "Fromage en grains",
@@ -10,19 +10,19 @@
   "item.cravings_mod.wort_bottle": "Bouteille de moût de bière",
   "item.cravings_mod.burger_buns": "Pains à hamburger",
   "item.cravings_mod.flour": "Farine",
-  "item.cravings_mod.cheese_sandwich": "Sandwich au fromage",
-  "item.cravings_mod.dipped_curds": "Caillé trempé",
   "item.cravings_mod.flour_sack": "Sac de farine",
-  "item.cravings_mod.fabric": "Tissu",
+  "item.cravings_mod.dipped_curds": "Caillé trempé",
+  "item.cravings_mod.cheese_sandwich": "Sandwich au fromage",
   "item.cravings_mod.pitaya": "Pitaya",
+  "item.cravings_mod.fabric": "Tissu",
   "item.cravings_mod.blt": "BLT",
   "item.cravings_mod.raw_bacon": "Bacon cru",
   "block.cravings_mod.pitaya_crop": "Graines de pitaya",
   "item.cravings_mod.ice_cream": "Crème glacée",
   "gui.cravings_mod.fryer_gui.label_fryer": "Friteuse",
   "item.cravings_mod.dough": "Pâte",
-  "item.cravings_mod.cheese_slice": "Tranche de fromage",
   "item.cravings_mod.toast": "Pain grillé",
+  "item.cravings_mod.cheese_slice": "Tranche de fromage",
   "item.cravings_mod.olive": "Olive",
   "item.cravings_mod.knife": "Couteau",
   "item.cravings_mod.grape_seeds": "Pépins de raisin",
@@ -31,6 +31,7 @@
   "block.cravings_mod.lemon_sapling": "Jeune citronnier",
   "block.cravings_mod.lemon_leaves": "Feuilles de citron",
   "block.cravings_mod.lettuce_crop": "Lettuce Crop",
+  "item.cravings_mod.radish": "Radish",
   "item.cravings_mod.bucket_of_whey": "Seau de lactosérum",
   "item.cravings_mod.yeast": "Levure",
   "item.cravings_mod.fried_curds": "Caillé frit",
