--- a/src/main/resources/assets/cravings_mod/lang/it_it.json
+++ b/src/main/resources/assets/cravings_mod/lang/it_it.json
@@ -1,6 +1,6 @@
 {
-  "item.cravings_mod.grilled_cheese": "Panino al formaggio grigliato",
   "item.cravings_mod.hamburger": "Hamburger",
+  "item.cravings_mod.grilled_cheese": "Panino al formaggio grigliato",
   "item.cravings_mod.beer_bottle": "Bottiglia di birra",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Sacco Di Farina",
   "item.cravings_mod.cheese_curds": "Cagliata di formaggio",
@@ -10,19 +10,19 @@
   "item.cravings_mod.wort_bottle": "Bottiglia di mosto di birra",
   "item.cravings_mod.burger_buns": "Panini per hamburger",
   "item.cravings_mod.flour": "Farina",
-  "item.cravings_mod.flour_sack": "Sacco Di Farina",
-  "item.cravings_mod.dipped_curds": "Cagliata imbevuta",
   "item.cravings_mod.cheese_sandwich": "Panino al formaggio",
-  "item.cravings_mod.pitaya": "Pitaya",
+  "item.cravings_mod.dipped_curds": "Cagliata imbevuta",
+  "item.cravings_mod.flour_sack": "Sacco Di Farina",
   "item.cravings_mod.fabric": "Tessuto",
+  "item.cravings_mod.pitaya": "Pitaya",
   "item.cravings_mod.blt": "BLT",
   "item.cravings_mod.raw_bacon": "Bacon cruda",
   "block.cravings_mod.pitaya_crop": "Semi di Pitaya",
   "item.cravings_mod.ice_cream": "Gelato",
   "gui.cravings_mod.fryer_gui.label_fryer": "Friggitore",
   "item.cravings_mod.dough": "Impasto",
-  "item.cravings_mod.toast": "Pane abbrustolito",
   "item.cravings_mod.cheese_slice": "Fetta Di Formaggio",
+  "item.cravings_mod.toast": "Pane abbrustolito",
   "item.cravings_mod.olive": "Oliva",
   "item.cravings_mod.knife": "Coltello",
   "item.cravings_mod.grape_seeds": "Semi d\u0027uva",
@@ -31,6 +31,7 @@
   "block.cravings_mod.lemon_sapling": "Alberello Di Limone",
   "block.cravings_mod.lemon_leaves": "Foglie di limone",
   "block.cravings_mod.lettuce_crop": "Lettuce Crop",
+  "item.cravings_mod.radish": "Radish",
   "item.cravings_mod.bucket_of_whey": "Secchio di siero di latte",
   "item.cravings_mod.yeast": "Lievito",
   "item.cravings_mod.fried_curds": "Cagliata fritta",
