25w26a, finished radishes, testing for adding tomato & pitaya crops to creative cravings tab. 0.4.0 is coming soon

--- a/src/main/resources/assets/cravings_mod/lang/de_de.json
+++ b/src/main/resources/assets/cravings_mod/lang/de_de.json
@@ -1,6 +1,6 @@
 {
-  "item.cravings_mod.hamburger": "Hamburger",
   "item.cravings_mod.grilled_cheese": "Gegrilltes Käsesandwich",
+  "item.cravings_mod.hamburger": "Hamburger",
   "item.cravings_mod.beer_bottle": "Bierflasche",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Mehlsack",
   "item.cravings_mod.cheese_curds": "Käsebruch",
@@ -10,11 +10,11 @@
   "item.cravings_mod.wort_bottle": "Würzeflasche",
   "item.cravings_mod.burger_buns": "Burgerbrötchen",
   "item.cravings_mod.flour": "Mehl",
-  "item.cravings_mod.flour_sack": "Mehlsack",
-  "item.cravings_mod.dipped_curds": "Getauchter Käsebruch",
   "item.cravings_mod.cheese_sandwich": "Käsesandwich",
-  "item.cravings_mod.fabric": "Stoff",
+  "item.cravings_mod.dipped_curds": "Getauchter Käsebruch",
+  "item.cravings_mod.flour_sack": "Mehlsack",
   "item.cravings_mod.pitaya": "Pitaya",
+  "item.cravings_mod.fabric": "Stoff",
   "item.cravings_mod.blt": "BLT",
   "item.cravings_mod.raw_bacon": "Roher Speck",
   "block.cravings_mod.pitaya_crop": "Pitaya-Samen",
@@ -31,12 +31,14 @@
   "block.cravings_mod.lemon_leaves": "Zitronenblätter",
   "block.cravings_mod.lemon_sapling": "Zitronensetzling",
   "block.cravings_mod.lettuce_crop": "Lettuce Crop",
-  "item.cravings_mod.radish": "Radish",
+  "item.cravings_mod.radish": "Rettich",
   "item.cravings_mod.bucket_of_whey": "Eimer mit Molke",
   "item.cravings_mod.yeast": "Hefe",
+  "block.cravings_mod.radish_crop": "Lettuce Crop",
   "item.cravings_mod.fried_curds": "Gebratener Käsebruch",
   "item.cravings_mod.tool_handle": "Werkzeuggriff",
   "item.cravings_mod.lettuce_seeds": "Salatsamen",
+  "item.cravings_mod.radish_seeds": "Rettichsamen",
   "item.cravings_mod.ricotta": "Ricotta",
   "item.cravings_mod.vodka": "Wodka",
   "item.cravings_mod.bucket_of_curdy_milk": "Eimer mit Quark",
