--- a/src/main/resources/assets/cravings_mod/lang/en_us.json
+++ b/src/main/resources/assets/cravings_mod/lang/en_us.json
@@ -34,9 +34,11 @@
   "item.cravings_mod.radish": "Radish",
   "item.cravings_mod.bucket_of_whey": "Bucket of Whey",
   "item.cravings_mod.yeast": "Yeast",
+  "block.cravings_mod.radish_crop": "Radish Crop",
   "item.cravings_mod.fried_curds": "Fried Curds",
   "item.cravings_mod.tool_handle": "Tool Handle",
   "item.cravings_mod.lettuce_seeds": "Lettuce Seeds",
+  "item.cravings_mod.radish_seeds": "Radish Seeds",
   "item.cravings_mod.ricotta": "Ricotta",
   "item.cravings_mod.vodka": "Vodka Bottle",
   "item.cravings_mod.bucket_of_curdy_milk": "Bucket of Curdy Milk",
