--- a/src/main/resources/assets/cravings_mod/lang/fr_fr.json
+++ b/src/main/resources/assets/cravings_mod/lang/fr_fr.json
@@ -1,6 +1,6 @@
 {
-  "item.cravings_mod.grilled_cheese": "Sandwich au fromage grillé",
   "item.cravings_mod.hamburger": "Hamburger",
+  "item.cravings_mod.grilled_cheese": "Sandwich au fromage grillé",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Sac de farine",
   "item.cravings_mod.beer_bottle": "Bouteille de bière",
   "item.cravings_mod.cheese_curds": "Fromage en grains",
@@ -10,11 +10,11 @@
   "item.cravings_mod.wort_bottle": "Bouteille de moût de bière",
   "item.cravings_mod.burger_buns": "Pains à hamburger",
   "item.cravings_mod.flour": "Farine",
-  "item.cravings_mod.flour_sack": "Sac de farine",
-  "item.cravings_mod.dipped_curds": "Caillé trempé",
   "item.cravings_mod.cheese_sandwich": "Sandwich au fromage",
-  "item.cravings_mod.pitaya": "Pitaya",
+  "item.cravings_mod.dipped_curds": "Caillé trempé",
+  "item.cravings_mod.flour_sack": "Sac de farine",
   "item.cravings_mod.fabric": "Tissu",
+  "item.cravings_mod.pitaya": "Pitaya",
   "item.cravings_mod.blt": "BLT",
   "item.cravings_mod.raw_bacon": "Bacon cru",
   "block.cravings_mod.pitaya_crop": "Graines de pitaya",
@@ -31,12 +31,14 @@
   "block.cravings_mod.lemon_sapling": "Jeune citronnier",
   "block.cravings_mod.lemon_leaves": "Feuilles de citron",
   "block.cravings_mod.lettuce_crop": "Lettuce Crop",
-  "item.cravings_mod.radish": "Radish",
+  "item.cravings_mod.radish": "Radis",
   "item.cravings_mod.bucket_of_whey": "Seau de lactosérum",
   "item.cravings_mod.yeast": "Levure",
+  "block.cravings_mod.radish_crop": "Lettuce Crop",
   "item.cravings_mod.fried_curds": "Caillé frit",
   "item.cravings_mod.tool_handle": "Poignée d\u0027outil",
   "item.cravings_mod.lettuce_seeds": "Graines de laitue",
+  "item.cravings_mod.radish_seeds": "Graines de Radis",
   "item.cravings_mod.ricotta": "Ricotta",
   "item.cravings_mod.vodka": "Vodka",
   "item.cravings_mod.bucket_of_curdy_milk": "Seau de lait caillé",
