--- a/src/main/resources/assets/cravings_mod/lang/it_it.json
+++ b/src/main/resources/assets/cravings_mod/lang/it_it.json
@@ -31,12 +31,14 @@
   "block.cravings_mod.lemon_sapling": "Alberello Di Limone",
   "block.cravings_mod.lemon_leaves": "Foglie di limone",
   "block.cravings_mod.lettuce_crop": "Lettuce Crop",
-  "item.cravings_mod.radish": "Radish",
+  "item.cravings_mod.radish": "Ravanello",
   "item.cravings_mod.bucket_of_whey": "Secchio di siero di latte",
   "item.cravings_mod.yeast": "Lievito",
+  "block.cravings_mod.radish_crop": "Lettuce Crop",
   "item.cravings_mod.fried_curds": "Cagliata fritta",
   "item.cravings_mod.tool_handle": "Maniglia dello strumento",
   "item.cravings_mod.lettuce_seeds": "Semi di lattuga",
+  "item.cravings_mod.radish_seeds": "Semi di ravanello",
   "item.cravings_mod.ricotta": "Ricotta",
   "item.cravings_mod.vodka": "Vodka",
   "item.cravings_mod.bucket_of_curdy_milk": "Secchio di cagliata",
