--- a/src/main/resources/assets/cravings_mod/lang/fr_fr.json
+++ b/src/main/resources/assets/cravings_mod/lang/fr_fr.json
@@ -70,5 +70,9 @@
   "item.cravings_mod.lemon_sapling": "Lemon Sapling",
   "item.cravings_mod.grape_crop": "Grape Crop",
   "item.cravings_mod.lettuce_crop": "Lettuce Crop",
-  "item.cravings_mod.radish_crop": "Radish Crop"
+  "item.cravings_mod.radish_crop": "Radish Crop",
+  "item.cravings_mod.green_bean_crop": "Tomato Crop",
+  "item.cravings_mod.green_beans": "Pitaya",
+  "item.cravings_mod.pitaya_crop": "Graines de pitaya",
+  "item.cravings_mod.tomato_crop": "Graines de tomates"
 }
