25w31a, experimental, saving for testing purposes, working on natural generation of crops srry for the long wait, 0.4.0 is still coming but personal projects pushed it back quite a while

--- a/src/main/resources/assets/cravings_mod/lang/it_it.json
+++ b/src/main/resources/assets/cravings_mod/lang/it_it.json
@@ -74,5 +74,7 @@
   "item.cravings_mod.green_bean_crop": "Tomato Crop",
   "item.cravings_mod.green_beans": "Pitaya",
   "item.cravings_mod.pitaya_crop": "Semi di Pitaya",
-  "item.cravings_mod.tomato_crop": "Semi di Pomodoro"
+  "item.cravings_mod.tomato_crop": "Semi di Pomodoro",
+  "item.cravings_mod.salt": "Salt",
+  "item.cravings_mod.single_crop_generation": "Single Natural Crop"
 }
