--- a/src/main/resources/assets/cravings_mod/lang/en_us.json
+++ b/src/main/resources/assets/cravings_mod/lang/en_us.json
@@ -74,5 +74,7 @@
   "item.cravings_mod.green_bean_crop": "Green Bean Seeds",
   "item.cravings_mod.green_beans": "Pitaya",
   "item.cravings_mod.pitaya_crop": "Pitaya Seeds",
-  "item.cravings_mod.tomato_crop": "Tomato Seeds"
+  "item.cravings_mod.tomato_crop": "Tomato Seeds",
+  "item.cravings_mod.salt": "Salt",
+  "item.cravings_mod.single_crop_generation": "Single Natural Crop"
 }
