--- a/src/main/resources/assets/cravings_mod/lang/fr_fr.json
+++ b/src/main/resources/assets/cravings_mod/lang/fr_fr.json
@@ -74,5 +74,7 @@
   "item.cravings_mod.green_bean_crop": "Tomato Crop",
   "item.cravings_mod.green_beans": "Pitaya",
   "item.cravings_mod.pitaya_crop": "Graines de pitaya",
-  "item.cravings_mod.tomato_crop": "Graines de tomates"
+  "item.cravings_mod.tomato_crop": "Graines de tomates",
+  "item.cravings_mod.salt": "Salt",
+  "item.cravings_mod.single_crop_generation": "Single Natural Crop"
 }
