--- a/src/main/resources/assets/cravings_mod/lang/de_de.json
+++ b/src/main/resources/assets/cravings_mod/lang/de_de.json
@@ -76,6 +76,5 @@
   "item.cravings_mod.pitaya_crop": "Pitaya-Samen",
   "item.cravings_mod.tomato_crop": "Tomatensamen",
   "item.cravings_mod.salt": "Salt",
-  "item.cravings_mod.single_crop_generation": "Single Natural Crop",
-  "item.cravings_mod.testplant": "Testplant"
+  "item.cravings_mod.single_crop_generation": "Single Natural Crop"
 }
