--- a/src/main/resources/assets/cravings_mod/lang/en_us.json
+++ b/src/main/resources/assets/cravings_mod/lang/en_us.json
@@ -76,6 +76,5 @@
   "item.cravings_mod.pitaya_crop": "Pitaya Seeds",
   "item.cravings_mod.tomato_crop": "Tomato Seeds",
   "item.cravings_mod.salt": "Salt",
-  "item.cravings_mod.single_crop_generation": "Single Natural Crop",
-  "item.cravings_mod.testplant": "Testplant"
+  "item.cravings_mod.single_crop_generation": "Single Natural Crop"
 }
