--- a/src/main/resources/assets/cravings_mod/lang/de_de.json
+++ b/src/main/resources/assets/cravings_mod/lang/de_de.json
@@ -86,5 +86,10 @@
   "item.cravings_mod.jalapeno_seeds": "Jalapeno-Samen",
   "item.cravings_mod.green_pepper": "Grüner Pfeffer",
   "item.cravings_mod.green_pepper_crop": "Green Pepper Crop",
-  "item.cravings_mod.green_pepper_seeds": "Grüner Pfeffer Samen"
+  "item.cravings_mod.green_pepper_seeds": "Grüner Pfeffer Samen",
+  "subtitles.bellow": "",
+  "entity.cravings_mod.bison": "Bison",
+  "item.cravings_mod.bison_spawn_egg": "Bison Spawn Egg",
+  "item.cravings_mod.deer_spawn_egg": "Deer Spawn Egg",
+  "entity.cravings_mod.deer": "Deer"
 }
